--- a/packages/express-backend/package.json
+++ b/packages/express-backend/package.json
@@ -4,12 +4,17 @@
   "description": "",
   "type": "module",
   "main": "backend.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
+"scripts": {
+  "test": "echo \"Error: no test specified\" && exit 1",
+  "dev": "npx nodemon backend.js",
+  "start": "node backend.js"
+},
   "author": "",
   "license": "ISC",
   "dependencies": {
     "express": "^5.1.0"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.10"
   }
 }
